Refactor: moved Rna class to its own file

--- a/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
+++ b/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="DNA\Dna.cs" />
     <Compile Include="DNA\DnaTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RNA\Rna.cs" />
     <Compile Include="RNA\RnaTest.cs" />
   </ItemGroup>
   <ItemGroup>
