--- a/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
+++ b/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="DNA\DnaTest.cs" />
     <Compile Include="FIB\Fib.cs" />
     <Compile Include="FIB\FibTest.cs" />
+    <Compile Include="GC\GCTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="REVC\ReverseComplement.cs" />
     <Compile Include="REVC\ReverseComplementTest.cs" />
