SUBS: answer accepted

--- a/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
+++ b/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="REVC\ReverseComplementTest.cs" />
     <Compile Include="RNA\Rna.cs" />
     <Compile Include="RNA\RnaTest.cs" />
+    <Compile Include="SUBS\Subs.cs" />
     <Compile Include="SUBS\SubsTest.cs" />
   </ItemGroup>
   <ItemGroup>
