--- a/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
+++ b/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
@@ -62,7 +62,9 @@
   <ItemGroup>
     <Compile Include="DNA\Dna.cs" />
     <Compile Include="DNA\DnaTest.cs" />
+    <Compile Include="FIBD\Component.cs" />
     <Compile Include="FIBD\FibdTest.cs" />
+    <Compile Include="FIBD\Rabbit.cs" />
     <Compile Include="FIB\Fib.cs" />
     <Compile Include="FIB\FibTest.cs" />
     <Compile Include="GC\GcContent.cs" />
