--- a/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
+++ b/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
@@ -71,10 +71,12 @@
     <Compile Include="GC\GcContent.cs" />
     <Compile Include="GC\GCContentTest.cs" />
     <Compile Include="HAMM\HammTest.cs" />
+    <Compile Include="MRNA\Mrna.cs" />
     <Compile Include="MRNA\MrnaTest.cs" />
     <Compile Include="PROT\Prot.cs" />
     <Compile Include="PROT\ProtTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PRTM\PrtmTest.cs" />
     <Compile Include="REVC\ReverseComplement.cs" />
     <Compile Include="REVC\ReverseComplementTest.cs" />
     <Compile Include="RNA\Rna.cs" />
@@ -111,6 +113,7 @@
     <Content Include="PROT\rosalind_prot.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="PRTM\README.txt" />
     <Content Include="REVC\README.txt" />
     <Content Include="REVC\rosalind_revc.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
