SPLC: Moved Splc to its own file.

--- a/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
+++ b/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
@@ -91,6 +91,7 @@
     <Compile Include="REVC\ReverseComplementTest.cs" />
     <Compile Include="RNA\Rna.cs" />
     <Compile Include="RNA\RnaTest.cs" />
+    <Compile Include="SPLC\Splc.cs" />
     <Compile Include="SPLC\SplcTest.cs" />
     <Compile Include="SUBS\Subs.cs" />
     <Compile Include="SUBS\SubsTest.cs" />
