PERM: Moved Perm class to its own file.

--- a/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
+++ b/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="ORF\Orf.cs" />
     <Compile Include="ORF\OrfTest.cs" />
     <Compile Include="PERM\ArrayComparison.cs" />
+    <Compile Include="PERM\Perm.cs" />
     <Compile Include="PERM\PermTest.cs" />
     <Compile Include="PROT\Prot.cs" />
     <Compile Include="PROT\ProtTest.cs" />
