--- a/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
+++ b/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="GRPH\Grph.cs" />
     <Compile Include="GRPH\GrphTest.cs" />
     <Compile Include="HAMM\HammTest.cs" />
+    <Compile Include="IPRB\IprbTest.cs" />
     <Compile Include="LCSM\Lcsm.cs" />
     <Compile Include="LCSM\LcsmTest.cs" />
     <Compile Include="MPRT\Mprt.cs" />
@@ -132,6 +133,7 @@
     <Content Include="HAMM\rosalind_hamm.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="IPRB\README.txt" />
     <Content Include="LCSM\README.txt" />
     <Content Include="LCSM\rosalind_lcsm.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
