--- a/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
+++ b/Demo.Rosalind/Demo.Rosalind.Tests/Demo.Rosalind.Tests.csproj
@@ -134,6 +134,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="IPRB\README.txt" />
+    <Content Include="IPRB\rosalind_iprb.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="LCSM\README.txt" />
     <Content Include="LCSM\rosalind_lcsm.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
